--- a/src/app/_hauptKomponente/f-angebot/f-angebot.component.html
+++ b/src/app/_hauptKomponente/f-angebot/f-angebot.component.html
@@ -83,6 +83,8 @@
         </div>
         <div class="positionTable">
             <table>
+
+                <!-- Table Head (Statisch) -->
                 <thead>
                     <tr>
                         <th>Position</th>
@@ -94,6 +96,8 @@
                         <th>Endpreis</th>
                     </tr>
                 </thead>
+
+                <!-- Table Body (Dynamisch) -->
                 <tbody>
                     <tr>
                         <td><a routerLink="/">001</a></td>
@@ -104,51 +108,8 @@
                         <td><a routerLink="/">0%</a></td>
                         <td><a routerLink="/">CHF 1500.10.-</a></td>
                     </tr>
-                    <tr>
-                        <td><a routerLink="/">001</a></td>
-                        <td><a routerLink="/">Landingpage<br /> Untertext 1 <br /> Untertext 2</a></td>
-                        <td><a routerLink="/">1</a></td>
-                        <td><a routerLink="/">Pauschal</a></td>
-                        <td><a routerLink="/">CHF 1500.10.-01</a></td>
-                        <td><a routerLink="/">0%</a></td>
-                        <td><a routerLink="/">CHF 1500.10.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/">001</a></td>
-                        <td><a routerLink="/">Landingpage<br /> Untertext 1 <br /> Untertext 2</a></td>
-                        <td><a routerLink="/">1</a></td>
-                        <td><a routerLink="/">Pauschal</a></td>
-                        <td><a routerLink="/">CHF 1500.10.-01</a></td>
-                        <td><a routerLink="/">0%</a></td>
-                        <td><a routerLink="/">CHF 1500.10.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/">001</a></td>
-                        <td><a routerLink="/">Landingpage<br /> Untertext 1 <br /> Untertext 2</a></td>
-                        <td><a routerLink="/">1</a></td>
-                        <td><a routerLink="/">Pauschal</a></td>
-                        <td><a routerLink="/">CHF 1500.10.-01</a></td>
-                        <td><a routerLink="/">0%</a></td>
-                        <td><a routerLink="/">CHF 1500.10.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/">001</a></td>
-                        <td><a routerLink="/">Landingpage<br /> Untertext 1 <br /> Untertext 2</a></td>
-                        <td><a routerLink="/">1</a></td>
-                        <td><a routerLink="/">Pauschal</a></td>
-                        <td><a routerLink="/">CHF 1500.10.-01</a></td>
-                        <td><a routerLink="/">0%</a></td>
-                        <td><a routerLink="/">CHF 1500.10.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/">001</a></td>
-                        <td><a routerLink="/">Landingpage<br /> Untertext 1 <br /> Untertext 2</a></td>
-                        <td><a routerLink="/">1</a></td>
-                        <td><a routerLink="/">Pauschal</a></td>
-                        <td><a routerLink="/">CHF 1500.10.-01</a></td>
-                        <td><a routerLink="/">0%</a></td>
-                        <td><a routerLink="/">CHF 1500.10.-</a></td>
-                    </tr>
+
+                    <!-- Table Ergebnis (Statisch) -->
                     <tr class="zwischenSpalte">
                         <td colspan="7"></td>
                     </tr>
@@ -181,6 +142,8 @@
                     </tr>
                 </tbody>
             </table>
+
+            <!-- Table Buttons (Statisch) -->
             <div class="tableMenu">
                 <div class="split firstSplit">
                     <div class="btnPositionen">
