--- a/src/app/_hauptKomponente/h-kunde/h-kunde.component.html
+++ b/src/app/_hauptKomponente/h-kunde/h-kunde.component.html
@@ -84,41 +84,17 @@
         <div class="split firstSplit">
             <div class="windowTable">
                 <table>
+
+                    <!-- Table Head (Statisch) -->
                     <thead>
                         <tr>
                             <th>Angebotsnummer</th>
                             <th>Status</th>
                         </tr>
                     </thead>
+
+                    <!-- Table Body (Dynamisch) -->
                     <tbody>
-                        <tr>
-                            <td><a routerLink="/projekte/angebot">AN 10-001</a></td>
-                            <td><a routerLink="/projekte/angebot">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/angebot">AN 10-001</a></td>
-                            <td><a routerLink="/projekte/angebot">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/angebot">AN 10-001</a></td>
-                            <td><a routerLink="/projekte/angebot">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/angebot">AN 10-001</a></td>
-                            <td><a routerLink="/projekte/angebot">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/angebot">AN 10-001</a></td>
-                            <td><a routerLink="/projekte/angebot">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/angebot">AN 10-001</a></td>
-                            <td><a routerLink="/projekte/angebot">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/angebot">AN 10-001</a></td>
-                            <td><a routerLink="/projekte/angebot">Offen</a></td>
-                        </tr>
                         <tr>
                             <td><a routerLink="/projekte/angebot">AN 10-001</a></td>
                             <td><a routerLink="/projekte/angebot">Offen</a></td>
@@ -130,85 +106,17 @@
         <div class="split secondSplit">
             <div class="windowTable">
                 <table>
+
+                    <!-- Table Head (Statisch) -->
                     <thead>
                         <tr>
                             <th>Auftragsnummer</th>
                             <th>Status</th>
                         </tr>
                     </thead>
+
+                    <!-- Table Body (Dynamisch) -->
                     <tbody>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
                         <tr>
                             <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
                             <td><a routerLink="/projekte/auftrag">Offen</a></td>
@@ -220,25 +128,17 @@
         <div class="split thirdSplit">
             <div class="windowTable">
                 <table>
+
+                    <!-- Table Head (Statisch) -->
                     <thead>
                         <tr>
                             <th>Rechnungsnummer</th>
                             <th>Status</th>
                         </tr>
                     </thead>
+
+                    <!-- Table Body (Dynamisch) -->
                     <tbody>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">RE 60-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">RE 60-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">RE 60-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
                         <tr>
                             <td><a routerLink="/projekte/auftrag">RE 60-001</a></td>
                             <td><a routerLink="/projekte/auftrag">Offen</a></td>
