--- a/src/app/_hauptKomponente/k-unternehmen/k-unternehmen.component.html
+++ b/src/app/_hauptKomponente/k-unternehmen/k-unternehmen.component.html
@@ -69,6 +69,8 @@
         </div>
         <div class="windowTable mitarbeiterTable">
             <table>
+
+                <!-- Table Head (Statisch) -->
                 <thead>
                     <tr>
                         <th>Nummer</th>
@@ -80,169 +82,9 @@
                         <th>Administrator</th>
                     </tr>
                 </thead>
+
+                <!-- Table Body (Dynamisch) -->
                 <tbody>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
                     <tr>
                         <td>MA 100-001</td>
                         <td>Brändle</td>
