--- a/src/app/_popupKomponente/ansprechpartner/ansprechpartner.component.html
+++ b/src/app/_popupKomponente/ansprechpartner/ansprechpartner.component.html
@@ -12,56 +12,12 @@
             <p>Partner:</p>
             <div class="popupTableFirst popupTable">
                 <table>
+
+                    <!-- Table Body (Dynamisch) -->
                     <tbody>
                         <tr>
                             <td><a href="">Thomas Brändle - AP 50-001</a></td>
                         </tr>
-                        <tr>
-                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
-                        </tr>
-
                     </tbody>
                 </table>
             </div>
