--- a/src/app/_popupKomponente/belege/belege.component.html
+++ b/src/app/_popupKomponente/belege/belege.component.html
@@ -44,6 +44,8 @@
                 <table>
                     <thead>
                     </thead>
+
+                    <!-- Table Body (Dynamisch) -->
                     <tbody>
                         <tr>
                             <td>14.02.2022</td>
@@ -51,157 +53,6 @@
                             <td><a href="">Erneut versenden</a></td>
                             <td><a href="">Download</a></td>
                         </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-
                     </tbody>
                 </table>
             </div>
