--- a/src/app/_popupKomponente/jahresabschluss/jahresabschluss.component.html
+++ b/src/app/_popupKomponente/jahresabschluss/jahresabschluss.component.html
@@ -11,6 +11,8 @@
         <div class="split fullWindow">
             <div class="windowTable popupTable popupTableFull">
                 <table>
+
+                    <!-- Table Head (Statisch) -->
                     <thead>
                         <tr>
                             <th>Geschäftsjahr</th>
@@ -18,133 +20,14 @@
                             <th>Download</th>
                         </tr>
                     </thead>
+
+                    <!-- Table Body (Dynamisch) -->
                     <tbody>
                         <tr>
                             <td>2021/2022</td>
                             <td>Jahresabschluss</td>
                             <td><a href="">Download</a></td>
                         </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-
                     </tbody>
                 </table>
             </div>
