--- a/src/app/_popupKomponente/kalkulation/kalkulation.component.html
+++ b/src/app/_popupKomponente/kalkulation/kalkulation.component.html
@@ -22,83 +22,9 @@
                     <thead>
 
                     </thead>
+
+                    <!-- Table Body (Dynamisch) -->
                     <tbody>
-                        <tr>
-                            <td><a href="">001</a></td>
-                            <td><a href="">Landingpage</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">001</a></td>
-                            <td><a href="">Landingpage</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">001</a></td>
-                            <td><a href="">Landingpage</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">001</a></td>
-                            <td><a href="">Landingpage</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">001</a></td>
-                            <td><a href="">Landingpage</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">001</a></td>
-                            <td><a href="">Landingpage</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">001</a></td>
-                            <td><a href="">Landingpage</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">001</a></td>
-                            <td><a href="">Landingpage</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">001</a></td>
-                            <td><a href="">Landingpage</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">001</a></td>
-                            <td><a href="">Landingpage</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">001</a></td>
-                            <td><a href="">Landingpage</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">001</a></td>
-                            <td><a href="">Landingpage</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">001</a></td>
-                            <td><a href="">Landingpage</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">001</a></td>
-                            <td><a href="">Landingpage</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">001</a></td>
-                            <td><a href="">Landingpage</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">001</a></td>
-                            <td><a href="">Landingpage</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">001</a></td>
-                            <td><a href="">Landingpage</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">001</a></td>
-                            <td><a href="">Landingpage</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">001</a></td>
-                            <td><a href="">Landingpage</a></td>
-                        </tr>
                         <tr>
                             <td><a href="">001</a></td>
                             <td><a href="">Landingpage</a></td>
