--- a/src/app/_popupKomponente/kundendaten/kundendaten.component.html
+++ b/src/app/_popupKomponente/kundendaten/kundendaten.component.html
@@ -15,6 +15,8 @@
     <div class="popupContent">
         <div class="windowTable popupTable">
             <table>
+
+                <!-- Table Head (Statisch) -->
                 <thead>
                     <tr>
                         <th>Kundennummer</th>
@@ -23,121 +25,9 @@
                         <th>Kategorie</th>
                     </tr>
                 </thead>
+
+                <!-- Table Body (Dynamisch) -->
                 <tbody>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
                     <tr>
                         <td><a href="">KU 40-001</a></td>
                         <td><a href="">Thomas Brändle</a></td>
