--- a/src/app/_popupKomponente/meilenstein/meilenstein.component.html
+++ b/src/app/_popupKomponente/meilenstein/meilenstein.component.html
@@ -46,21 +46,9 @@
         <div class="split thirdSplit">
             <p>Arbeitspakete:</p>
             <div class="arbeitspakete">
-                <input type="text" class="readOnly" value="Arbeitspaket">
-                <input type="text" class="readOnly" value="Arbeitspaket">
-                <input type="text" class="readOnly" value="Arbeitspaket">
-                <input type="text" class="readOnly" value="Arbeitspaket">
-                <input type="text" class="readOnly" value="Arbeitspaket">
-                <input type="text" class="readOnly" value="Arbeitspaket">
-                <input type="text" class="readOnly" value="Arbeitspaket">
-                <input type="text" class="readOnly" value="Arbeitspaket">
-                <input type="text" class="readOnly" value="Arbeitspaket">
-                <input type="text" class="readOnly" value="Arbeitspaket">
-                <input type="text" class="readOnly" value="Arbeitspaket">
-                <input type="text" class="readOnly" value="Arbeitspaket">
-                <input type="text" class="readOnly" value="Arbeitspaket">
-                <input type="text" class="readOnly" value="Arbeitspaket">
-                <input type="text" class="readOnly" value="Arbeitspaket">
+
+                <!-- Input (Dynamisch) -->
+
                 <input type="text" class="readOnly" value="Arbeitspaket">
 
             </div>
