--- a/src/app/_popupKomponente/position-artikel/position-artikel.component.html
+++ b/src/app/_popupKomponente/position-artikel/position-artikel.component.html
@@ -14,6 +14,8 @@
     <div class="popupContent">
         <div class="windowTable popupTable">
             <table>
+
+                <!-- Table Head (Statisch) -->
                 <thead>
                     <tr>
                         <th>Artikelnummer</th>
@@ -23,6 +25,8 @@
                         <th>VP 1</th>
                     </tr>
                 </thead>
+
+                <!-- Table Body (Dynamisch) -->
                 <tbody>
                     <tr>
                         <td><a href="">AR 63-001</a></td>
@@ -31,154 +35,6 @@
                         <td><a href="">Pauschal</a></td>
                         <td><a href="">CHF 150.00.-</a></td>
                     </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-
                 </tbody>
             </table>
         </div>
