--- a/src/app/_popupKomponente/projekt-kundendaten/projekt-kundendaten.component.html
+++ b/src/app/_popupKomponente/projekt-kundendaten/projekt-kundendaten.component.html
@@ -37,92 +37,13 @@
                 <table>
                     <thead>
                     </thead>
+
+                    <!-- Table Body (Dynamisch) -->
                     <tbody>
                         <tr>
                             <td><a href="">Herr Thomas Brändle</a></td>
                             <td><a href="">Geschäftsführer</a></td>
                         </tr>
-                        <tr>
-                            <td><a href="">Herr Thomas Brändle</a></td>
-                            <td><a href="">Geschäftsführer</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Herr Thomas Brändle</a></td>
-                            <td><a href="">Geschäftsführer</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Herr Thomas Brändle</a></td>
-                            <td><a href="">Geschäftsführer</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Herr Thomas Brändle</a></td>
-                            <td><a href="">Geschäftsführer</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Herr Thomas Brändle</a></td>
-                            <td><a href="">Geschäftsführer</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Herr Thomas Brändle</a></td>
-                            <td><a href="">Geschäftsführer</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Herr Thomas Brändle</a></td>
-                            <td><a href="">Geschäftsführer</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Herr Thomas Brändle</a></td>
-                            <td><a href="">Geschäftsführer</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Herr Thomas Brändle</a></td>
-                            <td><a href="">Geschäftsführer</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Herr Thomas Brändle</a></td>
-                            <td><a href="">Geschäftsführer</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Herr Thomas Brändle</a></td>
-                            <td><a href="">Geschäftsführer</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Herr Thomas Brändle</a></td>
-                            <td><a href="">Geschäftsführer</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Herr Thomas Brändle</a></td>
-                            <td><a href="">Geschäftsführer</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Herr Thomas Brändle</a></td>
-                            <td><a href="">Geschäftsführer</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Herr Thomas Brändle</a></td>
-                            <td><a href="">Geschäftsführer</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Herr Thomas Brändle</a></td>
-                            <td><a href="">Geschäftsführer</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Herr Thomas Brändle</a></td>
-                            <td><a href="">Geschäftsführer</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Herr Thomas Brändle</a></td>
-                            <td><a href="">Geschäftsführer</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Herr Thomas Brändle</a></td>
-                            <td><a href="">Geschäftsführer</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Herr Thomas Brändle</a></td>
-                            <td><a href="">Geschäftsführer</a></td>
-                        </tr>
-
                     </tbody>
                 </table>
             </div>
