--- a/src/app/_popupKomponente/rechnungsadresse/rechnungsadresse.component.html
+++ b/src/app/_popupKomponente/rechnungsadresse/rechnungsadresse.component.html
@@ -32,6 +32,8 @@
             <p>Adressliste:</p>
             <div class="windowTable popupTable popupTableOneThird">
                 <table>
+
+                    <!-- Table Head (Statischi) -->
                     <thead>
                         <tr>
                             <th>Strasse</th>
@@ -39,137 +41,9 @@
                             <th>Land</th>
                         </tr>
                     </thead>
+
+                    <!-- Table Body (Dynamisch) -->
                     <tbody>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
                         <tr>
                             <td><a href="">Friedaustrasse 3</a></td>
                             <td><a href="">9608 Ganterschwil</a></td>
