--- a/src/app/_popupKomponente/stunden/stunden.component.html
+++ b/src/app/_popupKomponente/stunden/stunden.component.html
@@ -9,6 +9,8 @@
     </div>
     <div class="popupContent">
         <div>
+
+            <!-- Stunden (Statisch) -->
             <div class="th splitStunden">
                 <p class="inputDate">Datum:</p>
                 <p class="inputSelect">Meilenstein:</p>
@@ -16,6 +18,8 @@
                 <p class="inputTime">h:</p>
                 <p class="inputTime">min:</p>
             </div>
+
+            <!-- Stunden (Dynamisch) -->
             <div class="stundenContent">
                 <div class="stunden splitStunden">
                     <input class="inputDate" type="date">
@@ -29,92 +33,6 @@
                     <input class="inputTime" type="text" value="5">
                     <input class="inputTime" type="text" value="40">
                 </div>
-                <div class="stunden splitStunden">
-                    <input class="inputDate" type="date">
-                    <select class="inputSelect" name="meilenstein" id="meilenstein">
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                    </select>
-                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
-                    <input class="inputTime" type="text" value="5">
-                    <input class="inputTime" type="text" value="40">
-                </div>
-                <div class="stunden splitStunden">
-                    <input class="inputDate" type="date">
-                    <select class="inputSelect" name="meilenstein" id="meilenstein">
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                    </select>
-                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
-                    <input class="inputTime" type="text" value="5">
-                    <input class="inputTime" type="text" value="40">
-                </div>
-                <div class="stunden splitStunden">
-                    <input class="inputDate" type="date">
-                    <select class="inputSelect" name="meilenstein" id="meilenstein">
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                    </select>
-                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
-                    <input class="inputTime" type="text" value="5">
-                    <input class="inputTime" type="text" value="40">
-                </div>
-                <div class="stunden splitStunden">
-                    <input class="inputDate" type="date">
-                    <select class="inputSelect" name="meilenstein" id="meilenstein">
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                    </select>
-                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
-                    <input class="inputTime" type="text" value="5">
-                    <input class="inputTime" type="text" value="40">
-                </div>
-                <div class="stunden splitStunden">
-                    <input class="inputDate" type="date">
-                    <select class="inputSelect" name="meilenstein" id="meilenstein">
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                    </select>
-                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
-                    <input class="inputTime" type="text" value="5">
-                    <input class="inputTime" type="text" value="40">
-                </div>
-                <div class="stunden splitStunden">
-                    <input class="inputDate" type="date">
-                    <select class="inputSelect" name="meilenstein" id="meilenstein">
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                    </select>
-                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
-                    <input class="inputTime" type="text" value="5">
-                    <input class="inputTime" type="text" value="40">
-                </div>
-                <div class="stunden splitStunden">
-                    <input class="inputDate" type="date">
-                    <select class="inputSelect" name="meilenstein" id="meilenstein">
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                    </select>
-                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
-                    <input class="inputTime" type="text" value="5">
-                    <input class="inputTime" type="text" value="40">
-                </div>
-
-
             </div>
             <div class="stundenHinzufuegen splitStunden">
                 <div class="btnBearbeiten btnHinzufuegen">
