--- a/src/app/_hauptKomponente/g-kunden/g-kunden.component.html
+++ b/src/app/_hauptKomponente/g-kunden/g-kunden.component.html
@@ -14,6 +14,8 @@
         </div>
         <div class="windowTable">
             <table>
+
+                <!-- Table Head (Statisch) -->
                 <thead>
                     <tr>
                         <th>Nummer</th>
@@ -22,193 +24,9 @@
                         <th>Adresse</th>
                     </tr>
                 </thead>
+
+                <!-- Table Body (Dynamisch) -->
                 <tbody>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
                     <tr>
                         <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
                         <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
