--- a/src/app/_hauptKomponente/i-artikel/i-artikel.component.html
+++ b/src/app/_hauptKomponente/i-artikel/i-artikel.component.html
@@ -14,6 +14,8 @@
         </div>
         <div class="windowTable">
             <table>
+
+                <!-- Table Head (Statischi) -->
                 <thead>
                     <tr>
                         <th>Nummer</th>
@@ -23,224 +25,9 @@
                         <th>Einheit</th>
                     </tr>
                 </thead>
+
+                <!-- Table Body (Dynamisch) -->
                 <tbody>
-                    <tr>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">AR 60-001</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Landingpage</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">60 - Webentwicklung</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">150.00.-</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Pauschal</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">AR 60-001</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Landingpage</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">60 - Webentwicklung</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">150.00.-</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Pauschal</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">AR 60-001</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Landingpage</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">60 - Webentwicklung</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">150.00.-</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Pauschal</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">AR 60-001</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Landingpage</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">60 - Webentwicklung</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">150.00.-</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Pauschal</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">AR 60-001</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Landingpage</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">60 - Webentwicklung</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">150.00.-</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Pauschal</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">AR 60-001</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Landingpage</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">60 - Webentwicklung</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">150.00.-</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Pauschal</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">AR 60-001</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Landingpage</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">60 - Webentwicklung</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">150.00.-</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Pauschal</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">AR 60-001</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Landingpage</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">60 - Webentwicklung</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">150.00.-</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Pauschal</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">AR 60-001</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Landingpage</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">60 - Webentwicklung</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">150.00.-</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Pauschal</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">AR 60-001</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Landingpage</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">60 - Webentwicklung</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">150.00.-</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Pauschal</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">AR 60-001</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Landingpage</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">60 - Webentwicklung</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">150.00.-</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Pauschal</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">AR 60-001</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Landingpage</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">60 - Webentwicklung</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">150.00.-</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Pauschal</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">AR 60-001</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Landingpage</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">60 - Webentwicklung</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">150.00.-</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Pauschal</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">AR 60-001</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Landingpage</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">60 - Webentwicklung</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">150.00.-</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Pauschal</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">AR 60-001</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Landingpage</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">60 - Webentwicklung</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">150.00.-</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Pauschal</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">AR 60-001</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Landingpage</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">60 - Webentwicklung</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">150.00.-</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Pauschal</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">AR 60-001</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Landingpage</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">60 - Webentwicklung</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">150.00.-</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Pauschal</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">AR 60-001</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Landingpage</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">60 - Webentwicklung</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">150.00.-</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Pauschal</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">AR 60-001</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Landingpage</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">60 - Webentwicklung</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">150.00.-</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Pauschal</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">AR 60-001</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Landingpage</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">60 - Webentwicklung</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">150.00.-</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Pauschal</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">AR 60-001</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Landingpage</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">60 - Webentwicklung</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">150.00.-</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Pauschal</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">AR 60-001</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Landingpage</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">60 - Webentwicklung</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">150.00.-</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Pauschal</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">AR 60-001</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Landingpage</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">60 - Webentwicklung</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">150.00.-</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Pauschal</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">AR 60-001</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Landingpage</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">60 - Webentwicklung</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">150.00.-</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Pauschal</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">AR 60-001</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Landingpage</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">60 - Webentwicklung</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">150.00.-</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Pauschal</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">AR 60-001</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Landingpage</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">60 - Webentwicklung</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">150.00.-</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Pauschal</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">AR 60-001</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Landingpage</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">60 - Webentwicklung</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">150.00.-</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Pauschal</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">AR 60-001</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Landingpage</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">60 - Webentwicklung</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">150.00.-</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Pauschal</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">AR 60-001</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Landingpage</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">60 - Webentwicklung</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">150.00.-</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Pauschal</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">AR 60-001</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Landingpage</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">60 - Webentwicklung</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">150.00.-</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Pauschal</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">AR 60-001</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Landingpage</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">60 - Webentwicklung</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">150.00.-</a></td>
-                        <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Pauschal</a></td>
-                    </tr>
                     <tr>
                         <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">AR 60-001</a></td>
                         <td><a routerLink="/artikel/der-artikel" routerLinkActive="active">Landingpage</a></td>
